Fix AbstractList problem: asList
https://rickbsr.medium.com/%E9%96%92%E8%81%8A-arrays-aslist-%E7%9A%84%E5%9D%91-8389d3f1e544